<resources>
    <string name="app_name">Marvel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen">Splash screen</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create account</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_welcome">Welcome to the Marvel HQ\'s</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="cover">Cover</string>
    <string name="comic_detail">Comic Detail</string>
    <string name="tools_comic_description">The Greatest Super Hero of All Time RETURNS! The world may have changed since Spidey\'s been gone, but so has Peter Parker. This is a man with a second chance at life, and he\'s not wasting a moment of it. Same Parker Luck, new Parker attitude. Putting the \'friendly\' back in the neighborhood, the \'hero\' back into \'super hero,\' and the \'amazing\' back into \'Spider-Man!\' Also returning: The recharged and reenergized ELECTRO!</string>
    <string name="tools_comic_title">Amazing Spider-Man (2014) #1 (MHAN Variant)</string>
    <string name="label_published">Published:</string>
    <string name="tools_comic_published">April 30, 2014</string>
    <string name="label_price">Price:</string>
    <string name="tools_comic_price">$ 5.99</string>
    <string name="label_pages">Pages:</string>
    <string name="tools_comic_pages">38</string>
</resources>